--- a/util/Makefile
+++ b/util/Makefile
@@ -1,4 +1,4 @@
-all: dumpnoobna nbna_getval test_nbna_getI3
+all: dumpnoobna nbna_getval test_nbna_getI3 nbna_stats
 
 dumpnoobna: dumpnoobna.c ../noobna.h
 	$(CC) dumpnoobna.c -o dumpnoobna
@@ -9,7 +9,10 @@ nbna_getval: nbna_getval.c ../noobna.h
 test_nbna_getI3: test_nbna_getI3.c ../noobna.h
 	$(CC) test_nbna_getI3.c -o test_nbna_getI3
 
+nbna_stats: test_nbna_getI3.c ../noobna.h
+	$(CC) nbna_stats.c -o nbna_stats
+
 .PHONY: clean all
 
 clean:
-	rm -fv dumpnoobna nbna_getval test_nbna_getI3
+	rm -fv dumpnoobna nbna_getval test_nbna_getI3 nbna_stats
